# CorneaDeSci

./: Cargo.toml  README.md
migrations/: 20240101_initial_schema.sql
src/: config.rs  database.rs  error.rs  lib.rs  main.rs  routes.rs
src/api/: blockchain_routes.rs  funding_routes.rs  mod.rs  research_routes.rs  user_routes.rs
src/blockchain/: contract.rs  mod.rs  transaction.rs
src/models/: funding.rs  mod.rs  research.rs  user.rs
src/services/: auth.rs  blockchain.rs  funding.rs  mod.rs  research.rs  user.rs
