[package]
name = "corneadesci"
version = "0.1.0"
edition = "2021"
authors = ["CorneaDeSci Team"]
description = "Decentralized Corneal Health Research Platform"

[dependencies]
# Core dependencies
tokio = { version = "1.28.0", features = ["full"] }
actix-web = "4.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
dotenv = "0.15.0"
thiserror = "1.0.40"
once_cell = "1.17.1"

# Database
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres", "chrono", "uuid", "json"] }

# Blockchain integration
ethers = "2.0.4"
web3 = "0.18.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4.3"

# Authentication
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
rand = "0.8.5"

# Data processing
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }

[lib]
name = "corneadesci"
path = "src/lib.rs"

[[bin]]
name = "corneadesci_server"
path = "src/main.rs" 