[package]
name = "cornea-desci"
version = "0.1.0"
edition = "2021"
authors = ["CorneaDeSci Team"]
description = "A decentralized corneal health research platform"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15.0"
thiserror = "1.0"
once_cell = "1.17.1"
derive_more = "0.99"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Blockchain integration
ethers = "2.0.4"
web3 = "0.18.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4.3"

# Authentication
jsonwebtoken = "9.1"
bcrypt = "0.15"
rand = "0.8.5"

# Data processing
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }

[lib]
name = "corneadesci"
path = "src/lib.rs"

[[bin]]
name = "corneadesci_server"
path = "src/main.rs" 